<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/resultEdit"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="textEnd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn07"
        android:layout_width="72dp"
        android:layout_height="80dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/bouton_07"
        android:textSize="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultEdit"
        android:onClick="onClickNumericalButton"/>

    <Button
        android:id="@+id/btn08"
        android:layout_width="72dp"
        android:layout_height="80dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/bouton_08"
        android:textSize="18dp"
        app:layout_constraintLeft_toRightOf="@id/btn07"
        app:layout_constraintTop_toBottomOf="@id/resultEdit"
        android:onClick="onClickNumericalButton"/>

    <Button
        android:id="@+id/btn09"
        android:layout_width="72dp"
        android:layout_height="80dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/bouton_09"
        android:textSize="18dp"
        app:layout_constraintLeft_toRightOf="@id/btn08"
        app:layout_constraintTop_toBottomOf="@id/resultEdit"
        android:onClick="onClickNumericalButton"/>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="72dp"
        android:layout_height="80dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:text="@string/bouton_Add"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn09"
        app:layout_constraintTop_toBottomOf="@id/resultEdit"
        android:onClick="onClickOperatorButton"/>

    <Button
        android:id="@+id/btn04"
        android:layout_width="72dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:text="@string/bouton_04"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@id/btn07"
        app:layout_constraintTop_toBottomOf="@id/btn07"
        android:onClick="onClickNumericalButton"/>

    <Button
        android:id="@+id/btn05"
        android:layout_width="72dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:text="@string/bouton_05"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@id/btn04"
        app:layout_constraintTop_toTopOf="@id/btn04"
        android:onClick="onClickNumericalButton"/>

    <Button
        android:id="@+id/btn06"
        android:layout_width="72dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:text="@string/bouton_06"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@id/btn05"
        app:layout_constraintTop_toTopOf="@id/btn05"
        android:onClick="onClickNumericalButton"/>

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="72dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/bouton_Minus"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn06"
        app:layout_constraintTop_toTopOf="@id/btn06"
        android:onClick="onClickOperatorButton"/>

    <Button
        android:id="@+id/btn01"
        android:layout_width="72dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:text="@string/bouton_01"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@id/btn04"
        app:layout_constraintTop_toBottomOf="@id/btn04"
        android:onClick="onClickNumericalButton"/>

    <Button
        android:id="@+id/btn02"
        android:layout_width="72dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:text="@string/bouton_02"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@id/btn01"
        app:layout_constraintTop_toTopOf="@id/btn01"
        android:onClick="onClickNumericalButton"/>

    <Button
        android:id="@+id/btn03"
        android:layout_width="72dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:text="@string/bouton_03"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@id/btn02"
        app:layout_constraintTop_toTopOf="@id/btn02"
        android:onClick="onClickNumericalButton"/>

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="72dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/bouton_Divide"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn03"
        app:layout_constraintTop_toTopOf="@id/btn03"
        android:onClick="onClickOperatorButton"/>

    <Button
        android:id="@+id/btnClear"
        android:layout_width="72dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:text="@string/bouton_Clear"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@id/btn01"
        app:layout_constraintTop_toBottomOf="@id/btn01"
        android:onClick="onClickNumericalButton"/>

    <Button
        android:id="@+id/btn00"
        android:layout_width="72dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:text="@string/bouton_00"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@id/btnClear"
        app:layout_constraintTop_toTopOf="@id/btnClear"
        android:onClick="onClickNumericalButton"/>

    <Button
        android:id="@+id/btnDot"
        android:layout_width="72dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:text="@string/bouton_Dot"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@id/btn00"
        app:layout_constraintTop_toTopOf="@id/btn00"
        android:onClick="onClickNumericalButton"/>

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="72dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/bouton_Multiply"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnDot"
        app:layout_constraintTop_toTopOf="@id/btnDot"
        android:onClick="onClickOperatorButton"/>

    <Button
        android:id="@+id/btnResult"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:text="@string/bouton_Result"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/btnClear"
        app:layout_constraintTop_toBottomOf="@id/btnClear"
        android:onClick="btnResultClick"/>



</androidx.constraintlayout.widget.ConstraintLayout>